GPC/tests/examples/fail/tainting.gpc

GPRM::Kernel::Test test;
test = GPRM::Kernel::Test::Test();

int GPRM::Test::tainting() {
   int y = test.m1();
   return y; 
}
